--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
         "szepeviktor/phpstan-wordpress": "^1.3"
     },
     "scripts": {
+        "create-vendor-prefixed-dir": [
+            "sh -c '[ ! -d vendor-prefixed ] && mkdir -p vendor-prefixed'"
+        ],
         "prefix-namespaces": [
+            "@create-vendor-prefixed-dir",
             "sh -c 'test -f ./bin/strauss.phar || curl -o bin/strauss.phar -L -C - https://github.com/BrianHenryIE/strauss/releases/latest/download/strauss.phar'",
             "@php bin/strauss.phar",
             "@php composer dump-autoload"
@@ -28,14 +32,9 @@
             "@prefix-namespaces"
         ],
         "test": "phpunit",
-        "lint": "phpcs --standard=.phpcs.xml src/",
-        "analyse": "phpstan analyse src/",
+        "lint": "phpcs --standard=.phpcs.xml inc/",
+        "analyse": "phpstan analyse inc/",
         "post-install-cmd": [
-            "cp -r 'hooks/' '.git/hooks/'",
-            "php -r \"copy('hooks/pre-commit', '.git/hooks/pre-commit');\"",
-            "php -r \"copy('hooks/pre-push', '.git/hooks/commit-msg');\"",
-            "php -r \"chmod('.git/hooks/pre-commit', 0777);\"",
-            "php -r \"chmod('.git/hooks/pre-push', 0777);\"",
             "@prefix-namespaces"
         ]
     },
