--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,6 +4,7 @@ includes:
 parameters:
     level: max
     paths:
-        - src
+        - inc
+        - *.php
     bootstrapFiles:
         - vendor/autoload.php
